
* PollContext API - provides central access to result set with various convenience methods as well as metadata about records, such as failure count
* Batching - all API methods now support batching.
See the Options class set batch size for more information.

=== Fixes and Improvements

* Event system - better CPU usage in control thread
* Concurrency stability improvements
* Update dependencies

== v0.4.0.0
// https://github.com/confluentinc/parallel-consumer/releases/tag/0.4.0.0

=== Features

* https://projectreactor.io/[Project Reactor] non-blocking threading adapter module
* Generic Vert.x Future support - i.e. FileSystem, db etc...

=== Fixes and Improvements

* Vert.x concurrency control via WebClient host limits fixed - see #maxCurrency
* Vert.x API cleanup of invalid usage
* Out of bounds for empty collections
* Use ConcurrentSkipListMap instead of TreeMap to prevent concurrency issues under high pressure
* log: Show record topic in slow-work warning message

== v0.3.2.0

=== Fixes and Improvements

* Major: Upgrade to Apache Kafka 2.8 (still compatible with 2.6 and 2.7 though)
* Adds support for managed executor service (Java EE Compatibility feature)
* #65 support for custom retry delay providers

== v0.3.1.0

=== Fixes and Improvements

* Major refactor to code base - primarily the two large God classes
** Partition state now tracked separately
** Code moved into packages
* Busy spin in some cases fixed (lower CPU usage)
* Reduce use of static data for test assertions - remaining identified for later removal
* Various fixes for parallel testing stability

== v0.3.0.3

=== Fixes and Improvements

==== Overview

* Tests now run in parallel
* License fixing / updating and code formatting
* License format runs properly now when local, check on CI
* Fix running on Windows and Linux
* Fix JAVA_HOME issues

==== Details:

* tests: Enable the fail fast feature now that it's merged upstream
* tests: Turn on parallel test runs