@@ -5,6 +5,7 @@ package io.confluent.parallelconsumer;
  */
 
 import io.confluent.parallelconsumer.internal.AbstractParallelEoSStreamProcessor;
+import io.confluent.parallelconsumer.internal.InternalRuntimeError;
 import lombok.SneakyThrows;
 import lombok.extern.slf4j.Slf4j;
 import org.apache.kafka.clients.producer.ProducerRecord;
@@ -13,6 +14,8 @@ import pl.tlinkowski.unij.api.UniLists;
 
 import java.util.ArrayList;
 import java.util.List;
+import java.util.concurrent.Future;
+import java.util.concurrent.TimeUnit;
 import java.util.function.Consumer;
 import java.util.function.Function;
 
@@ -48,32 +51,49 @@ public class ParallelEoSStreamProcessor<K, V> extends AbstractParallelEoSStreamP
 
     @Override
     @SneakyThrows
-    public void pollAndProduceMany(Function<PollContext<K, V>, List<ProducerRecord<K, V>>> userFunction,
-                                   Consumer<ConsumeProduceResult<K, V, K, V>> callback) {
+    public void pollAndProduceMany(
+            Function<PollContext<K, V>, List<ProducerRecord<K, V>>> userFunction,
+            Consumer<ConsumeProduceResult<K, V, K, V>> callback) {
         // todo refactor out the producer system to a sub class
         if (!getOptions().isProducerSupplied()) {
-            throw new IllegalArgumentException("To use the produce flows you must supply a Producer in the options");
+            throw new IllegalArgumentException(
+                    "To use the produce flows you must supply a Producer in the options");
         }
 
         // wrap user func to add produce function
-        Function<PollContextInternal<K, V>, List<ConsumeProduceResult<K, V, K, V>>> wrappedUserFunc = context -> {
-            List<ProducerRecord<K, V>> recordListToProduce = carefullyRun(userFunction, context.getPollContext());
+        Function<PollContextInternal<K, V>, List<ConsumeProduceResult<K, V, K, V>>> wrappedUserFunc =
+                context -> {
+                    List<ProducerRecord<K, V>> recordListToProduce =
+                            carefullyRun(userFunction, context.getPollContext());
 
-            if (recordListToProduce.isEmpty()) {
-                log.debug("No result returned from function to send.");
-            }
-            log.trace("asyncPoll and Stream - Consumed a record ({}), and returning a derivative result record to be produced: {}", context, recordListToProduce);
+                    if (recordListToProduce.isEmpty()) {
+                        log.debug("No result returned from function to send.");
+                    }
+                    log.trace(
+                            "asyncPoll and Stream - Consumed a record ({}), and returning a derivative result record to be produced: {}",
+                            context,
+                            recordListToProduce);
 
-            List<ConsumeProduceResult<K, V, K, V>> results = new ArrayList<>();
-            log.trace("Producing {} messages in result...", recordListToProduce.size());
-            for (ProducerRecord<K, V> toProduce : recordListToProduce) {
-                log.trace("Producing {}", toProduce);
-                RecordMetadata produceResultMeta = super.getProducerManager().get().produceMessage(toProduce);
-                var result = new ConsumeProduceResult<>(context.getPollContext(), toProduce, produceResultMeta);
-                results.add(result);
-            }
-            return results;
-        };
+                    List<ConsumeProduceResult<K, V, K, V>> results = new ArrayList<>();
+                    log.trace("Producing {} messages in result...", recordListToProduce.size());
+
+                    var futures = super.getProducerManager().get().produceMessages(recordListToProduce);
+
+                    try {
+                        for (Tuple<ProducerRecord<K, V>, Future<RecordMetadata>> future : futures) {
+                            var recordMetadata =
+                                    future.getRight().get(options.getSendTimeout().toMillis(), TimeUnit.MILLISECONDS);
+                            var result =
+                                    new ConsumeProduceResult<>(
+                                            context.getPollContext(), future.getLeft(), recordMetadata);
+                            results.add(result);
+                        }
+                    } catch (Exception e) {
+                        throw new InternalRuntimeError(e);
+                    }
+
+                    return results;
+                };
 
         supervisorLoop(wrappedUserFunc, callback);
     }
