@@ -23,6 +23,7 @@ See the Options class set batch size for more information.
 * Event system - better CPU usage in control thread
 * Concurrency stability improvements
 * Update dependencies
+* Improve PollAndProduce performance by first producing all records, and then waiting for the produce results. Previously, this was done for each ProduceRecord individually.
 
 == v0.4.0.0
 // https://github.com/confluentinc/parallel-consumer/releases/tag/0.4.0.0
